--- a/talks_workshops/2022-08-05-creating-your-personal-website-using-quarto/index.qmd
+++ b/talks_workshops/2022-08-05-creating-your-personal-website-using-quarto/index.qmd
@@ -9,9 +9,6 @@ author:
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
     affiliation-url: https://ucsb-meds.github.io/
 date: 2022-08-05
-slug: csik2022quartoWebsites
-citation: 
-  url: https://samanthacsik.github.io/talks/2022-08-05-creating-your-personal-website-using-quarto/
 categories: [MEDS, R, Quarto]
 image: quarto_share.png
 ---
@@ -20,7 +17,7 @@ image: quarto_share.png
 #| eval: true 
 #| echo: false
 #| fig-align: "center"
-#| out-width: "85%" 
+#| out-width: "65%" 
 #| fig-alt: "One penguin standing on another penguin's shoulders in a snowscape, looking through a telescope at a Quarto logo 'moon' in the night sky."
 knitr::include_graphics("penguins_telescope_2.png")
 ```
@@ -37,8 +34,8 @@ Art by [Allison Horst](https://allisonhorst.com/)
 
 # Abstract
 
-A personal website is not only a great way to showcase your experiences and skills, but also gives people (potential employers included!) a better sense of who you are as a person. There are lots of great tools for building websites using R (e.g. `{distill}`, `{blogdown}`) -- this year, we'll be using [Quarto](https://quarto.org/), an exciting, new, and versatile publishing tool that supports R, Python, Julia, and ObservableJS. Want to get started on building your own website using Quarto? Check out this [tutorial](https://ucsb-meds.github.io/creating-quarto-websites/).
+A personal website is not only a great way to showcase your experiences and skills, but also gives people (potential employers included!) a better sense of who you are as a person. There are lots of great tools for building websites using R (e.g. `{distill}`, `{blogdown}`) -- this year, we'll be using [Quarto](https://quarto.org/){target="_blank"}, an exciting, new, and versatile publishing tool that supports R, Python, Julia, and ObservableJS. Want to get started on building your own website using Quarto? Check out this [tutorial](https://ucsb-meds.github.io/creating-quarto-websites/){target="_blank"}.
 
 # Audience
 
-This workshop was originally developed for the [Master of Environmental Data Science (MEDS) program](https://ucsb-meds.github.io/), administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/).
+This workshop was originally developed for the [Master of Environmental Data Science (MEDS) program](https://ucsb-meds.github.io/){target="_blank"}, administered by the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/masters-programs/master-environmental-data-science){target="_blank"} in partnership with the [National Center for Ecological Analysis and Synthesis](https://www.nceas.ucsb.edu/){target="_blank"}.
