--- a/talks_workshops/2023-08-03-just-enough-css/index.qmd
+++ b/talks_workshops/2023-08-03-just-enough-css/index.qmd
@@ -9,7 +9,6 @@ author:
     affiliation: The National Center for Ecological Analysis and Synthesis
     affiliation-url: https://www.nceas.ucsb.edu/
 date: 2023-08-03
-slug: csik2023css
 categories: [NCEAS, Quarto, CSS]
 image: bob-ross.gif
 draft: false
@@ -33,8 +32,18 @@ draft: false
 <!-- ``` -->
 <!-- </div> -->
 
+<!-- <center><iframe class="slide-deck" src="https://samanthacsik.github.io/just-enough-css-sass/#/title-slide" title="Just Enough CSS (and Sass) for data scientists" width="750px," height="550px"></iframe></center> -->
 
-<center><iframe class="slide-deck" src="https://samanthacsik.github.io/just-enough-css-sass/#/title-slide" title="Just Enough CSS (and Sass) for data scientists" width="750px," height="550px"></iframe></center>
+
+```{r}
+#| echo: false
+#| out-width: "20%"
+xaringanExtra::embed_xaringan(
+  url = "https://samanthacsik.github.io/just-enough-css-sass/#/title-slide",
+  ratio = "4:3",
+  max_width = "60%"
+)
+```
 
 ::: {.center-text}
 [{{< fa tv title="A television screen" >}} slides](https://samanthacsik.github.io/just-enough-css-sass/#/title-slide){.btn role="button" target="_blank"} [{{< fa brands github title="Octocat, the GitHub logo" >}} source code](https://github.com/samanthacsik/just-enough-css-sass){.btn role="button" target="_blank"}
@@ -49,4 +58,4 @@ In this workshop-style Roundtable, we'll first introduce and interact with some 
 
 # Audience
 
-This workshop was delivered to NCEAS residents and staff during the monthly [Roundtable](https://www.nceas.ucsb.edu/roundtable) seminar. Roundtable is a series of informal presentations and discussions on a wide variety of topics related to current work happening at NCEAS. Sign up for the [Google Group](https://groups.google.com/a/nceas.ucsb.edu/g/roundtable) to receive announcements of upcoming Roundtables.
+This workshop was delivered to NCEAS residents and staff during the monthly [Roundtable](https://www.nceas.ucsb.edu/roundtable){target="_blank"} seminar. Roundtable is a series of informal presentations and discussions on a wide variety of topics related to current work happening at NCEAS. Sign up for the [Google Group](https://groups.google.com/a/nceas.ucsb.edu/g/roundtable){target="_blank"} to receive announcements of upcoming Roundtables.
