--- a/courses/eds-296-shiny/index.qmd
+++ b/courses/eds-296-shiny/index.qmd
@@ -1,13 +1,15 @@
 ---
-title: "EDS 296- Intro to Shiny"
+title: "EDS 296 - Intro to Shiny"
 description: |
   a 2-unit course on building and deploying Shiny apps & dashboards
-categories: [UCSB, shiny, R]
+categories: [MEDS, active] # [UCSB, shiny, R]
 image: shiny-hex-small.png
 draft: false
 ---
 
-[{{< fa window-maximize >}} course website](https://ucsb-meds.github.io/EDS-296-Intro-to-Shiny/){.btn target=_blank} [{{< fa school >}} course catalog](https://bren.ucsb.edu/courses/eds-296-1w){.btn target=_blank}
+[{{< fa window-maximize >}} course website](https://ucsb-meds.github.io/EDS-296-Intro-to-Shiny/){.btn target=_blank} 
+
+<!-- [{{< fa school >}} course catalog](https://bren.ucsb.edu/courses/eds-296-1w){.btn target=_blank} -->
 
 <br>
 
@@ -15,7 +17,7 @@ draft: false
 
 These materials accompany the 2-unit, 2-day, hands-on coding course, [EDS 296-1W - Intro to Shiny](https://bren.ucsb.edu/courses/eds-296-1w), offered through the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/), in partnership with the [National Center for Ecological Analysis & Synthesis](https://www.nceas.ucsb.edu/).
 
-In this workshop, students learn how to build and deploy Shiny applications. The [`{shiny}` package](https://shiny.posit.co/) provides a framework that allows R users to build interactive web applications and dashboards, and has become a popular tool for sharing data analyses and data-derived outputs with broad audiences. We cover the fundamentals of reactivity, how to customize an application user interface (UI), best practices and workflows for developing shiny apps, and how to deploy apps online via Posit’s hosting service, [shinyapps.io](https://www.shinyapps.io/).
+In this course, students learn how to build and deploy Shiny applications. The [`{shiny}` package](https://shiny.posit.co/) provides a framework that allows R users to build interactive web applications and dashboards, and has become a popular tool for sharing data analyses and data-derived outputs with broad audiences. We cover the fundamentals of reactivity, how to customize an application user interface (UI), best practices and workflows for developing shiny apps, and how to deploy apps online via Posit’s hosting service, [shinyapps.io](https://www.shinyapps.io/).
 
 <br>
 
