--- a/courses/career-dev/index.qmd
+++ b/courses/career-dev/index.qmd
@@ -1,13 +1,43 @@
 ---
 title: "MEDS Career & Professional Development Workshop Series"
 description: |
-  *[UNDER DEVELOPMENT]* A program-long weekly workshop series, built and taught in collaboration with the Bren Career Team, focusing on career prep and portfolio-building
-categories: [MEDS, active] #[UCSB, MEDS, data-science-portfolio, Quarto, GitHub, career-development, personal-brand]
+  A program-long weekly workshop series focusing on career prep and portfolio-building, built and taught in collaboration with the Bren School's Career Services Team
+categories: [MEDS, career-development, personal brand, portfolio-building,  active] #[UCSB, MEDS, data-science-portfolio, Quarto, GitHub, career-development, personal-brand]
 image: horst-bren-small.png
 draft: false
 ---
 
+```{r}
+#| eval: true
+#| echo: false
+#| out-width: "100%"
+#| fig-align: "center"
+#| fig-alt: "An aerial image overlooking Bren Hall with the ocean and palm trees in the background"
+knitr::include_graphics("bren.png")
+```
+
+::: {.center-text}
 [{{< fa window-maximize >}} workshop website](https://ucsb-meds.github.io/career-professional-dev/){.btn target=_blank} 
+:::
 
-*details coming soon!*
+<br>
 
+# Description
+
+The MEDS Career & Professional Development Workshop Series is a core component of the Bren School’s Career Development Program for Master of Environmental Data Science (MEDS) students. This series is designed to support your [career readiness](){target="_blank"} by helping you build the skills, awareness, and confidence you’ll need to launch your career as an environmental data scientist.
+
+Success in environmental data science—and in your career more broadly—requires more than technical expertise. It also takes self-awareness, a clear understanding of your strengths and values, and a personal brand that reflects the impact you want to make. Just as important are polished application materials, strong communication and networking skills, and the ability to interview and negotiate with confidence. A compelling portfolio and professional website will not only help you stand out in today’s job market but also highlight the ways your work contributes to solving real environmental challenges.
+
+**Through this workshop series, you will:**
+
+- Gain an inside look at how employers make hiring decisions by stepping into the role of a hiring committee member
+- Build tailored resumes and cover letters that effectively market your skills and qualifications
+- Reflect on your values, strengths, and career goals to create an authentic personal brand
+- Develop a professional portfolio and website that showcases your skills and impact
+- Learn effective job search strategies to identify and pursue opportunities that align with your career goals
+- Strengthen your networking, interviewing, and negotiation skills to navigate the job market with confidence
+- Explore diverse career paths in environmental data science by building relationships and growing your professional network
+
+# When is this taught
+
+The MEDS Career & Professional Development Workshop Series launches in the 2025–2026 academic year. Programming kicks off during summer bootcamp and expands to weekly workshops throughout the fall quarter. While the schedule for winter and spring is still being finalized, we anticipate continuing to offer workshops during those quarters, though with a reduced schedule to give students the space to focus on their job search.
