--- a/courses/eds-296-shiny/index.qmd
+++ b/courses/eds-296-shiny/index.qmd
@@ -7,20 +7,6 @@ image: shiny-hex-small.png
 draft: false
 ---
 
-[{{< fa window-maximize >}} course website](https://ucsb-meds.github.io/EDS-296-Intro-to-Shiny/){.btn target=_blank} 
-
-<!-- [{{< fa school >}} course catalog](https://bren.ucsb.edu/courses/eds-296-1w){.btn target=_blank} -->
-
-<br>
-
-# Course description
-
-These materials accompany the 2-unit, 2-day, hands-on coding course, [EDS 296-1W - Intro to Shiny](https://bren.ucsb.edu/courses/eds-296-1w), offered through the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/), in partnership with the [National Center for Ecological Analysis & Synthesis](https://www.nceas.ucsb.edu/).
-
-In this course, students learn how to build and deploy Shiny applications. The [`{shiny}` package](https://shiny.posit.co/) provides a framework that allows R users to build interactive web applications and dashboards, and has become a popular tool for sharing data analyses and data-derived outputs with broad audiences. We cover the fundamentals of reactivity, how to customize an application user interface (UI), best practices and workflows for developing shiny apps, and how to deploy apps online via Posit’s hosting service, [shinyapps.io](https://www.shinyapps.io/).
-
-<br>
-
 ```{r}
 #| eval: true
 #| echo: false
@@ -28,6 +14,23 @@ In this course, students learn how to build and deploy Shiny applications. The [
 #| fig-align: "center"
 knitr::include_graphics("shiny-hex.png")
 ```
+
+
+::: {.center-text}
+[{{< fa window-maximize >}} course website](https://ucsb-meds.github.io/EDS-296-Intro-to-Shiny/){.btn target=_blank} 
+:::
+
+<!-- [{{< fa school >}} course catalog](https://bren.ucsb.edu/courses/eds-296-1w){.btn target=_blank} -->
+
+<br>
+
+# Course description
+
+These materials accompany the 2-unit, 2-day, hands-on coding course, [EDS 296 - Intro to Shiny](https://bren.ucsb.edu/courses/eds-296-1w), offered through the [Bren School of Environmental Science & Management](https://bren.ucsb.edu/), in partnership with the [National Center for Ecological Analysis & Synthesis](https://www.nceas.ucsb.edu/).
+
+In this course, students learn how to build and deploy Shiny applications. The [`{shiny}` package](https://shiny.posit.co/) provides a framework that allows R users to build interactive web applications and dashboards, and has become a popular tool for sharing data analyses and data-derived outputs with broad audiences. We cover the fundamentals of reactivity, how to customize an application user interface (UI), best practices and workflows for developing shiny apps, and how to deploy apps online via Posit’s hosting service, [shinyapps.io](https://www.shinyapps.io/).
+
+<!-- <br> -->
 
 # When is this taught?
 
