added note about Max's class on BEL fellow workshop page

--- a/posts/data-viz-2.0/index.qmd
+++ b/posts/data-viz-2.0/index.qmd
@@ -22,6 +22,7 @@ draft-mode: unlinked
   - lecture materials with templates and keys that pair with slides (organized in table)
   - pre-discussion prep
   - discussion materials (organized in table)
+- template .qmd files
 - HW4 option to propose your own project (HT: Max Czapanskiy)
 - started wiki
 - googlesheet for learning partners
