--- a/talks_workshops/2025-08-06-datastorytelling/index.qmd
+++ b/talks_workshops/2025-08-06-datastorytelling/index.qmd
@@ -38,4 +38,4 @@ Before ever touching a computer or writing a line of code, it’s helpful (and i
 
 # Audience
 
-This workshop was developed for the the 2025 [Bren Environmental Leadership (BEL) fellows](https://bren.ucsb.edu/undergrad-mentoring/bren-environmental-leadership-bel-program). The BEL program aims to increase the representation of first-generation, low-income, and underrepresented students pursuing careers in the environmental field and natural sciences. As part of the program, undergraduate fellows receive mentorship from graduate students, conduct a summer research project, and participate in professional development workshops and community-building events.
+This workshop was originally developed for the the 2025 [Bren Environmental Leadership (BEL) fellows](https://bren.ucsb.edu/undergrad-mentoring/bren-environmental-leadership-bel-program). The BEL program aims to increase the representation of first-generation, low-income, and underrepresented students pursuing careers in the environmental field and natural sciences. As part of the program, undergraduate fellows receive mentorship from graduate students, conduct a summer research project, and participate in professional development workshops and community-building events. [A version](https://docs.google.com/presentation/d/11uF9ZQadJQBSM7_1ab4RUhMpTJsNp2VpFt2oAfMnbJs/edit?usp=sharing){target="_blank"} of this workshop was given to the undergraduate students in [Max Czapanskiy](https://bren.ucsb.edu/people/max-czapanskiy){target="_blank"}'s Marine Policy course in Fall 2025.
